resolved: show project name (with name space) instead of project ID